--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ perl:
     - "5.18"
     - "5.20"
 
+before_install:
+    - cpanm App::FatPacker::Simple
+
 install: ""
 script:
     - stty cols 238
