WIP PR to debug travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,12 @@ script:
     - make
     - make check
 
+after_failure:
+  - cat /home/travis/.cpanm/work/*/build.log
+
 notifications:
-    recipients:
-        - dave@goodell.io
     email:
+        recipients:
+            - dave@goodell.io
         on_success: change
         on_failure: always
