travis: pass --force to cpanm
The perl5.8 build was failing during setup for some reason I couldn't
quickly debug.  Passing --force to cpanm resolves the issue.

Example failure: https://travis-ci.org/github/goodell/nowrap/jobs/714730937

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ perl:
     - "5.20"
 
 before_install:
-    - cpanm App::FatPacker::Simple
+    - cpanm --force App::FatPacker::Simple
 
 install: ""
 script:
