Correctly handle space(s) after escape
These are also swallowed, until (and including) the next non-escape non-space character.

--- a/tests/tcescape.in
+++ b/tests/tcescape.in
@@ -4,5 +4,7 @@ singleescape
 twoescapeoccurrences
 adjacentescapes
 adjacentescapes
+after singlespace
+after   manyspaces
 endescape
 endescap
